--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -141,12 +141,11 @@ Account"
                 android:hint="City"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/activity_signup_city"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:maxLines="1" />
+                     />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -159,12 +158,17 @@ Account"
                 android:hint="State"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/activity_signup_state"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:maxLines="1" />
+                    />
+<!--                <com.google.android.material.textfield.TextInputEditText-->
+<!--                    android:id="@+id/activity_signup_state"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:inputType="text"-->
+<!--                    android:maxLines="1" />-->
             </com.google.android.material.textfield.TextInputLayout>
 
 
