LoginActivity SignUpActivity - bug fixed and ui improved

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -29,31 +29,32 @@
 
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/signUp_backbtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
                 android:src="@drawable/ic_baseline_arrow_back_ios_24"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.018"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="60dp"
                 android:fontFamily="@font/roboto"
-                android:text="Create \n
-Account"
+                android:text="Create \nAccount"
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.059"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout"
@@ -62,6 +63,7 @@ Account"
                 android:paddingTop="40dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:paddingHorizontal="20dp"
                 android:hint="First Name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -82,6 +84,7 @@ Account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
+                android:paddingHorizontal="20dp"
                 android:layout_margin="10dp"
                 android:hint="Last Name"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
@@ -98,6 +101,7 @@ Account"
                 android:id="@+id/textInputLayout2"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+                android:paddingHorizontal="20dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:hint="Mobile Number"
@@ -115,6 +119,7 @@ Account"
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout5"
+                android:paddingHorizontal="20dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -136,6 +141,7 @@ Account"
                 android:id="@+id/textInputLayout6"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+                android:paddingHorizontal="20dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:hint="City"
@@ -154,6 +160,7 @@ Account"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingHorizontal="20dp"
                 android:layout_margin="10dp"
                 android:hint="State"
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">
@@ -176,6 +183,7 @@ Account"
                 android:id="@+id/textInputLayout27"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+                android:paddingHorizontal="20dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:hint="Password"
