--- a/app/src/main/res/layout/activity_publish_add.xml
+++ b/app/src/main/res/layout/activity_publish_add.xml
@@ -29,20 +29,21 @@
 
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/publish_backBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
                 android:src="@drawable/ic_baseline_arrow_back_ios_24"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.103"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="15dp"
                 android:fontFamily="@font/roboto"
                 android:text="Publish Add"
                 android:textColor="@color/white"
@@ -80,6 +81,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:paddingTop="40dp"
+                android:paddingHorizontal="20dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:hint="Product Title"
@@ -100,6 +102,8 @@
                 android:id="@+id/textInputLayout1"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+                android:paddingHorizontal="20dp"
+
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:layout_margin="10dp"
@@ -118,6 +122,7 @@
                 android:id="@+id/textInputLayout2"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+                android:paddingHorizontal="20dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:hint="Product Description"
@@ -136,6 +141,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout5"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:paddingHorizontal="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -156,6 +162,7 @@
                 android:id="@+id/textInputLayout6"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
+                android:paddingHorizontal="20dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:hint="Selling Price of the product"
